typescript/checker/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement4.ts.stderr
error: TS1115
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement4.ts:4:5
  |
4 |     continue TWO;
  |     ^^^^^^^^^^^^^

